--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,17 +7,7 @@
     ],
     "headers": [
         {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Cross-Origin-Embedder-Policy",
-                    "value": "require-corp"
-                },
-                {
-                    "key": "Cross-Origin-Opener-Policy",
-                    "value": "same-origin"
-                }
-            ]
+            "source": "/(.*)"
         }
     ]
 }
